Fix minor issue on Firefox desktop browser

--- a/app/assets/stylesheets/create_question_form.scss
+++ b/app/assets/stylesheets/create_question_form.scss
@@ -80,7 +80,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    height: 100%;
     padding-right: 33px;
     margin-left: 33px;
     margin-right: 33px;
